--- a/CGBillingSystems/src/main/webapp/WEB-INF/web.xml
+++ b/CGBillingSystems/src/main/webapp/WEB-INF/web.xml
@@ -20,4 +20,8 @@
 		<load-on-startup>1</load-on-startup>
 
 	</servlet>
+	<servlet-mapping>
+		<servlet-name>rest</servlet-name>
+		<url-pattern>/billing/*</url-pattern>
+	</servlet-mapping>
 </web-app>
