--- a/CGBillingSystems/pom.xml
+++ b/CGBillingSystems/pom.xml
@@ -7,7 +7,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>CGBillingSystems Maven Webapp</name>
 	<url>http://maven.apache.org</url>
+	<!-- <properties> <ojdbc14Path>D:\jar\ojdbc6.jar</ojdbc14Path> </properties> -->
 	<dependencies>
+
 		<!-- Junit Dependency -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -31,6 +33,18 @@
 
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>4.1.6.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-expression</artifactId>
+			<version>4.1.6.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>4.1.4.RELEASE</version>
 		</dependency>
@@ -46,53 +60,101 @@
 			<artifactId>spring-core</artifactId>
 			<version>4.1.4.RELEASE</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>4.1.6.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>4.1.6.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>4.1.6.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>4.1.6.RELEASE</version>
+		</dependency>
+
+
 		<!-- JPA -->
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>4.0.1.Final</version>
+			<version>4.3.10.Final</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>4.2.0.Final</version>
+			<version>4.3.0.Final</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.hibernate.common</groupId>
 			<artifactId>hibernate-commons-annotations</artifactId>
-			<version>4.0.1.Final</version>
-			<classifier>tests</classifier>
+			<version>4.0.5.Final</version>
+			<!-- <classifier>tests</classifier> -->
 		</dependency>
 
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
-			<artifactId>hibernate-jpa-2.0-api</artifactId>
-			<version>1.0.1.Final</version>
+			<artifactId>hibernate-jpa-2.1-api</artifactId>
+			<version>1.0.0.Final</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.0.1.Final</version>
+			<version>4.3.10.Final</version>
 		</dependency>
 
-		<!-- ojdbc6 -->
+		<!-- 4.3.10.Final 5.2.3.Final -->
+
+		<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.2.3</version>
+		</dependency>
+
+		<!-- ojdbc6 <dependency> <groupId>com.oracle</groupId> <artifactId>ojdbc14</artifactId> 
+			<version>11.2.0</version> <scope>system</scope> <systemPath>${ojdbc14Path}</systemPath> 
+			</dependency> -->
+		<dependency>
+			<groupId>org.jboss.logging</groupId>
+			<artifactId>jboss-logging</artifactId>
+			<version>3.1.3.GA</version>
+		</dependency>
 
 		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc6</artifactId>
-			<version>11.2.0</version>
-			<scope>system</scope>
-			<systemPath>C:\oraclexe\app\oracle\product\11.2.0\server\jdbc\lib\ojdbc6.jar</systemPath>
+			<groupId>org.jboss.logging</groupId>
+			<artifactId>jboss-logging-annotations</artifactId>
+			<version>1.2.0.Beta1</version>
+			<scope>provided</scope>
 		</dependency>
-		
+
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-tx</artifactId>
-			<version>4.2.6.RELEASE</version>
+			<groupId>org.jboss.spec.javax.transaction</groupId>
+			<artifactId>jboss-transaction-api_1.1_spec</artifactId>
+			<version>1.0.0.Final</version>
 		</dependency>
+		<!-- Tomcat <dependency> <groupId>org.apache.tomcat</groupId> <artifactId>tomcat</artifactId> 
+			<version>8.5.5</version> <type>pom</type> </dependency> -->
+
+
 	</dependencies>
 	<build>
-		<finalName>CGBillingSystems</finalName>
+		<finalName>SpringRestfulServicesMobileBilling</finalName>
 	</build>
 </project>
